[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-dynamics"
version = "0.1.0"
description = "Analysis of turn-taking, interruptions, and speaker dynamics"
authors = [{name = "Aammar Amjad", email = "muhammad.aammar.amjad@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"pandas>=2.0.0",
"numpy>=1.24.0",
"matplotlib>=3.7.0",
"seaborn>=0.12.0",
"scikit-learn>=1.3.0",
"jupyter>=1.0.0",
"nbconvert>=7.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]
deploy = ["fastapi>=0.100", "uvicorn>=0.23", "streamlit>=1.25"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
